--- a/HW2.4/Base.lproj/Main.storyboard
+++ b/HW2.4/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EQR-p3-XIq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2X3-hw-B3O">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -26,10 +26,10 @@
             </objects>
             <point key="canvasLocation" x="941" y="840"/>
         </scene>
-        <!--Photo Collection-->
+        <!--Photo Collection Controller-->
         <scene sceneID="t3j-R3-0zn">
             <objects>
-                <collectionViewController id="JK3-Nc-AG9" customClass="PhotoCollection" sceneMemberID="viewController">
+                <collectionViewController id="JK3-Nc-AG9" customClass="PhotoCollectionController" customModule="HW2_4" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="brX-5d-QAb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,27 +41,32 @@
                             <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoImage" id="GOI-ON-9jj" customClass="PhotoCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoImage" id="GOI-ON-9jj" customClass="PhotoViewCell" customModule="HW2_4" customModuleProvider="target">
                                 <rect key="frame" x="20" y="20" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1DI-SR-5fp">
                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTJ-ds-auI">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTJ-ds-auI">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="RFv-DH-Zu1"/>
+                                                <constraint firstAttribute="width" constant="100" id="WaO-qY-rev"/>
+                                            </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="VTJ-ds-auI" secondAttribute="trailing" id="2xD-UB-W3f"/>
-                                        <constraint firstItem="VTJ-ds-auI" firstAttribute="top" secondItem="1DI-SR-5fp" secondAttribute="top" id="dbd-R9-OnR"/>
-                                        <constraint firstItem="VTJ-ds-auI" firstAttribute="leading" secondItem="1DI-SR-5fp" secondAttribute="leading" id="n1o-hT-B8D"/>
-                                        <constraint firstAttribute="bottom" secondItem="VTJ-ds-auI" secondAttribute="bottom" id="qcc-sv-QlU"/>
+                                        <constraint firstItem="VTJ-ds-auI" firstAttribute="leading" secondItem="1DI-SR-5fp" secondAttribute="leading" id="2Si-Lf-IWK"/>
+                                        <constraint firstAttribute="trailing" secondItem="VTJ-ds-auI" secondAttribute="trailing" id="Rg1-Jm-Jz4"/>
+                                        <constraint firstItem="VTJ-ds-auI" firstAttribute="top" secondItem="1DI-SR-5fp" secondAttribute="top" id="fsT-AD-ObD"/>
+                                        <constraint firstAttribute="bottom" secondItem="VTJ-ds-auI" secondAttribute="bottom" id="v84-NU-bYL"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="100" height="100"/>
                                 <connections>
-                                    <outlet property="photoImg" destination="VTJ-ds-auI" id="JEK-k2-A0f"/>
+                                    <outlet property="imagePhoto" destination="VTJ-ds-auI" id="3hU-kY-LUY"/>
+                                    <segue destination="cvV-DX-rdc" kind="show" identifier="ShowPhoto" id="Xqe-re-kAF"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -71,18 +76,15 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="f95-PP-EAT"/>
-                    <connections>
-                        <segue destination="cvV-DX-rdc" kind="show" identifier="showPhoto" id="W5b-qT-4PF"/>
-                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N1d-tN-Jv8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3276.811594202899" y="-331.79347826086956"/>
         </scene>
-        <!--Photo View-->
+        <!--Photo View Controller-->
         <scene sceneID="GaY-bM-faE">
             <objects>
-                <viewController id="cvV-DX-rdc" customClass="PhotoView" sceneMemberID="viewController">
+                <viewController id="cvV-DX-rdc" customClass="PhotoViewController" customModule="HW2_4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nIh-Kd-CAE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,8 +114,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="njX-MX-XdG"/>
                     <connections>
-                        <outlet property="photoImage" destination="k3i-uZ-j3x" id="dRQ-Dl-S4O"/>
-                        <outlet property="titleLabel" destination="GbR-Zw-uaa" id="JZX-PN-UFV"/>
+                        <outlet property="imageLabel" destination="GbR-Zw-uaa" id="5vi-Br-fDm"/>
+                        <outlet property="imagePhoto" destination="k3i-uZ-j3x" id="bBc-pJ-nVt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ukG-TT-7Ie" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -148,17 +150,18 @@
                     <connections>
                         <segue destination="e2O-Qd-nGF" kind="relationship" relationship="viewControllers" id="2GF-6S-H72"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="yeZ-4k-QGJ"/>
+                        <segue destination="EQR-p3-XIq" kind="relationship" relationship="viewControllers" id="bD6-Rb-tH8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eZB-QI-Bos" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="941" y="117"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="x2J-aR-SQJ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EQR-p3-XIq" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="AoW-1m-NYH"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="photo" catalog="system" systemItem="history" id="AoW-1m-NYH"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nMr-IC-i35">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -176,5 +179,6 @@
     </scenes>
     <resources>
         <image name="hand.thumbsup.fill" catalog="system" width="64" height="64"/>
+        <image name="photo" catalog="system" width="64" height="48"/>
     </resources>
 </document>
